--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                           <li class="nav-item">
                             <a class="nav-link" href="#explore">Explore</a>
                           </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#cryptos">Cryptos</a>
+                          </li> 
                         </ul>
                       </div>
                     </div>    
