--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
 
     <div class="jumbotron jumbotron-fluid height100p banner" id="home">
       <div class="container h100">
-        <h1 class="display-4">Fluid jumbotron</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        <div class="contentBox h100">
+          <div>
+            <h1>Crypto News</h1>
+          </div>
+        </div>
       </div>
     </div>
 
