lorem p text copy added to the jumbotron

--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
         <div class="contentBox h100">
           <div>
             <h1>Crypto News</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, odit sed quod, ducimus laudantium doloribus quasi dolore eveniet asperiores fugiat quisquam vitae cumque magni adipisci id perspiciatis omnis qui? Enim.
+            Quasi numquam dolores, praesentium porro necessitatibus nulla est quia consequuntur, facere placeat pariatur dolorem maiores. Quaerat vitae, necessitatibus praesentium aliquid, est voluptatum voluptates maxime earum rem inventore dolorum odio fugiat?
+            Aliquam voluptatem quod debitis autem, mollitia iure magnam quisquam dolore excepturi ea deserunt tempore pariatur ut inventore voluptates, sit libero aliquid at eligendi ullam aut delectus ipsa fugiat eum. Sit.
+            Dicta eveniet suscipit eos perferendis omnis explicabo itaque quod expedita deleniti totam. Consectetur quas placeat perspiciatis assumenda esse, inventore quisquam minus illum nobis aperiam cum, ipsa dolorem eveniet, id debitis.
+            Voluptatibus voluptas explicabo, inventore, voluptate distinctio doloribus quidem aliquam molestiae eveniet iusto itaque cupiditate molestias tenetur laboriosam, nisi vitae delectus? Adipisci sint suscipit dolorem dolore nobis autem distinctio. Vitae, vel!
+            Quo inventore officiis esse quibusdam est, similique rem libero perferendis id, reprehenderit deserunt quos illum commodi eius placeat! Itaque nobis sequi, officiis reprehenderit mollitia eum animi. Deserunt eius iusto in.
+            Porro velit atque alias fuga veniam officia? Laboriosam, expedita repudiandae harum reiciendis ipsum dignissimos praesentium voluptate. Dolorum nemo deserunt, numquam quibusdam voluptate minus impedit commodi officiis est reprehenderit sequi voluptatem.
+            Nesciunt ratione cupiditate amet perspiciatis! Ex, tempore consectetur iusto, fuga vero expedita, impedit libero laboriosam optio harum in natus maxime rerum reiciendis vel veritatis sit mollitia assumenda maiores soluta excepturi!
+            Ducimus modi possimus ex praesentium, rerum consequuntur veritatis? Pariatur perspiciatis non asperiores aliquam amet adipisci odio soluta necessitatibus quia error laboriosam, praesentium explicabo voluptatum distinctio totam rerum odit eligendi deleniti!
+            Veritatis voluptates et cum sit! Libero rem mollitia, reprehenderit odio quia quo quibusdam qui facere provident, quam explicabo! Omnis accusantium hic possimus error minus qui saepe voluptatibus aliquam quis at.</p>
           </div>
         </div>
       </div>
