added new section w/ sec1 class for today's news lorem p text

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#explore">Explore</a>
+                            <a class="nav-link" href="#today">Explore</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="#cryptos">Cryptos</a>
@@ -34,7 +34,6 @@
                     </div>    
                   </nav>
     </header>
-
     <div class="jumbotron jumbotron-fluid height100p banner" id="home">
       <div class="container h100">
         <div class="contentBox h100">
@@ -54,7 +53,16 @@
         </div>
       </div>
     </div>
-
+    <section class="sec1" id="today">
+      <div class="row">
+        <div class="offset-sm-2 col-sm-8">
+          <div class="headerText">
+            <h2>Today's News</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos totam commodi quod aliquam vero accusamus error consequuntur voluptates porro perferendis. Sit iusto distinctio corporis eius suscipit tempore qui neque officia?</p>
+          </div>
+        </div>
+      </div>
+    </section>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
