centered the text w/ the text-center class

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section class="sec1" id="today">
       <div class="row">
         <div class="offset-sm-2 col-sm-8">
-          <div class="headerText">
+          <div class="headerText text-center">
             <h2>Today's News</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos totam commodi quod aliquam vero accusamus error consequuntur voluptates porro perferendis. Sit iusto distinctio corporis eius suscipit tempore qui neque officia?</p>
           </div>
