--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="col-sm-4">
           <div class="placeBox">
             <div class="imgBx">
-              <img src="images/img1.png" alt="">
+              <img src="images/img1.png" alt="" class="img-fluid">
             </div>
           </div>
         </div>
