added content class with h3 title and span subtitle to the img

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
             <div class="imgBx">
               <img src="images/img1.png" alt="" class="img-fluid">
             </div>
+            <div class="content">
+              <h3>Cryto Name <br><span>Crypto Category</span></h3>
+            </div>
           </div>
         </div>
       </div>
