added 2 more col-sm-4 divs

--- a/index.html
+++ b/index.html
@@ -73,6 +73,26 @@
             </div>
           </div>
         </div>
+        <div class="col-sm-4">
+          <div class="placeBox">
+            <div class="imgBx">
+              <img src="images/img1.png" alt="" class="img-fluid">
+            </div>
+            <div class="content">
+              <h3>Cryto Name <br><span>Crypto Category</span></h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="placeBox">
+            <div class="imgBx">
+              <img src="images/img1.png" alt="" class="img-fluid">
+            </div>
+            <div class="content">
+              <h3>Cryto Name <br><span>Crypto Category</span></h3>
+            </div>
+          </div>
+        </div>                
       </div>
     </section>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
